--- a/classes/wizard/spells/index.html
+++ b/classes/wizard/spells/index.html
@@ -2,7 +2,7 @@
 <!DOCTYPE html>
 <html lang="tw">
   <head>
-  <title>Wizard Spells | 地城世界 HTML SRD</title>
+  <title>法師法術 | 地城世界 HTML SRD</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     
     <link href="https://hazmole.github.io/Dungeon-World-HTML-SRD-release/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -109,8 +109,8 @@
     <div class="container">
        <div class="row">
           <div class="col-md-8 col-md-offset-1">
-             <div class="pseudoTitle">Wizard Spells</div>
-<div><h1>Cantrips</h1>
+             <div class="pseudoTitle">法師法術</div>
+<div><h1>戲法</h1>
 <p class="NoIndent">You prepare all of your cantrips every time you prepare spells without having to select them or count them toward your allotment of spells.</p>
 <div class="Spell"><h3 class="SpellName">Light<span class="Tags">	Cantrip</span></h3>
 <p class="NoIndent">An item you touch glows with arcane light, about as bright as a torch. It gives off no heat or sound and requires no fuel, but it is otherwise like a mundane torch. You have complete control of the color of the flame. The spell lasts as long as it is in your presence.</p></div>
@@ -119,7 +119,7 @@
 <div class="Spell"><h3 class="SpellName">Prestidigitation<span class="Tags">	Cantrip</span></h3>
 <p class="NoIndent">You perform minor tricks of true magic. If you touch an item as part of the casting you can make cosmetic changes to it: clean it, soil it, cool it, warm it, flavor it, or change its color. If you cast the spell without touching an item you can instead create minor illusions no bigger than yourself. Prestidigitation illusions are crude and clearly illusions—they won’t fool anyone, but they might entertain them.</p></div>
 <hr/>
-<div><h1>Level 1 Spells</h1></div>
+<div><h1>等級1 法術</h1></div>
 <div class="Spell"><h3 class="SpellName">Contact Spirits<span class="Tags">	Level 1	, Summoning</span></h3>
 <p class="NoIndent">Name the spirit you wish to contact (or leave it to the GM). You pull that creature through the planes, just close enough to speak to you. It is bound to answer any one question you ask to the best of its ability.</p></div>
 <div class="Spell"><h3 class="SpellName">Detect Magic<span class="Tags">	Level 1	, Divination</span></h3>
@@ -135,7 +135,7 @@
 <div class="Spell"><h3 class="SpellName">Alarm<span class="Tags">	Level 1</span></h3>
 <p class="NoIndent">Walk a wide circle as you cast this spell. Until you prepare spells again your magic will alert you if a creature crosses that circle. Even if you are asleep, the spell will shake you from your slumber.</p></div>
 <hr/>
-<div><h1>Level 3 Spells</h1></div>
+<div><h1>等級3 法術</h1></div>
 <div class="Spell"><h3 class="SpellName">Dispel Magic<span class="Tags">	Level 3</span></h3>
 <p class="NoIndent">Choose a spell or magic effect in your presence: this spell rips it apart. Lesser spells are ended, powerful magic is just reduced or dampened so long as you are nearby.</p></div>
 <div class="Spell"><h3 class="SpellName">Visions Through Time<span class="Tags">	Level 3	, Divination</span></h3>
@@ -149,7 +149,7 @@
 <div class="Spell"><h3 class="SpellName">Sleep<span class="Tags">	Level 3	, Enchantment</span></h3>
 <p class="NoIndent">1d4 enemies you can see of the GM’s choice fall asleep. Only creatures capable of sleeping are affected. They awake as normal: loud noises, jolts, pain.</p></div>
 <hr/>
-<div><h1>Level 5 Spells</h1></div>
+<div><h1>等級5 法術</h1></div>
 <div class="Spell"><h3 class="SpellName">Cage<span class="Tags">	Level 5	, Evocation, Ongoing</span></h3>
 <p class="NoIndent">The target is held in a cage of magical force. Nothing can get in or out of the cage. The cage remains until you cast another spell or dismiss it. While the spell is ongoing, the caged creature can hear your thoughts and you cannot leave sight of the cage.</p></div>
 <div class="Spell"><h3 class="SpellName">Contact Other Plane<span class="Tags">	Level 5	, Divination</span></h3>
@@ -168,7 +168,7 @@
 <li>It has some useful adaptation</li></ul>
 <p class="NoIndent">The GM will tell you the type of monster you get based on the traits you select. The creature remains on this plane until it dies or you dismiss it. While the spell is ongoing you take -1 to cast a spell.</p></div>
 <hr/>
-<div><h1>Level 7 Spells</h1></div>
+<div><h1>等級7 法術</h1></div>
 <div class="Spell"><h3 class="SpellName">Dominate<span class="Tags">	Level 7	, Enchantment, Ongoing</span></h3>
 <p class="NoIndent">Your touch pushes your mind into someone else’s. You gain 1d4 hold. Spend one hold to make the target take one of these actions:</p>
 <ul><li>Speak a few words of your choice</li>
@@ -185,7 +185,7 @@
 <div class="Spell"><h3 class="SpellName">Cloudkill<span class="Tags">	Level 7, Summoning, Ongoing</span></h3>
 <p class="NoIndent">A cloud of fog drifts into this realm from beyond the Black Gates of Death, filling the immediate area. Whenever a creature in the area takes damage it takes an additional, separate 1d6 damage which ignores armor. This spell persists so long as you can see the affected area, or until you dismiss it.</p></div>
 <hr/>
-<div><h1>Level 9 Spells</h1></div>
+<div><h1>等級9 法術</h1></div>
 <div class="Spell"><h3 class="SpellName">Antipathy<span class="Tags">	Level 9, Enchantment, Ongoing</span></h3>
 <p class="NoIndent">Choose a target and describe a type of creature or an alignment. Creatures of the specified type or alignment cannot come within sight of the target. If a creature of the specified type does find itself within sight of the target, it immediately flees. This effect continues until you leave the target’s presence or you dismiss the spell. While the spell is ongoing you take -1 to cast a spell.</p></div>
 <div class="Spell"><h3 class="SpellName">Alert<span class="Tags">	Level 9, Divination</span></h3>
@@ -242,7 +242,7 @@
       $(".Tags").each(function(i) {
         var current = $(this);
         var tags_arr = current.html().split(", ");
-        current.html(tags_arr.map(function(tag){
+        current.html(" "+tags_arr.map(function(tag){
             var className = "";
             tag = tag.trim();
             if(isRangeTag(tag))         className = "red";
