--- a/monsters/caverns/index.html
+++ b/monsters/caverns/index.html
@@ -124,7 +124,7 @@
 </ul>
 <h3 class="MonsterName">穴鼠	 (Cave Rat)<span class="Tags">成群, 小型</span></h3>
 <p class="MonsterStats">嚙咬 (d6 傷害, 1 穿透), 7 HP, 1 護甲</p>
-<p class="MonsterStats"><span class="Tags">近身, 破壞性</span></p>
+<p class="MonsterStats"><span class="Tags">近身, 毀亂</span></p>
 <p class="MonsterDescription">
 	有誰沒看過老鼠嗎？牠們就像那樣，只不過又髒又大，而且再也不會怕你了。也許牠們跟你在韃邏的骯髒酒館中用陷阱捉到、用小刀殺死的小傢伙們是親戚，而也許牠們也正在伺機展開那小小的鼠式復仇。 <b>本能</b>: 吞噬</p>
 <ul>
@@ -161,7 +161,7 @@
 </ul>
 <h3 class="MonsterName">土元素 (Earth Elemental)<span class="Tags">單獨, 巨型</span></h3>
 <p class="MonsterStats">猛砸 (d10+5 傷害), 27 HP, 4 護甲</p>
-<p class="MonsterStats"><span class="Tags">及遠, 擊退</span></p>
+<p class="MonsterStats"><span class="Tags">及遠, 強力</span></p>
 <p class="MonsterQualities"><strong>特性:</strong> 由石頭構成</p>
 <p class="MonsterDescription">
 	我們那兒的薩滿曾說這世界上的一切，石頭、樹木、溪流，都寄宿著靈魂。現在，當我親眼目睹大地在我腳下翻騰，以及那雙岩石巨拳把我的朋友們揍了個半死之後，我才算是信了那個瘋老頭。我看見的那傢伙相當巨大－－就跟房子一樣大！它從沸騰的岩崩洪流中忽然出現，發出如同雪崩的嗓音。現在，我要展現我的敬意。理當如此。 <b>本能</b>: 展現大地的力量</p>
@@ -222,7 +222,7 @@
 </ul>
 <h3 class="MonsterName">歌利亞 (Goliath)<span class="Tags">集團, 巨型, 組織, 聰穎</span></h3>
 <p class="MonsterStats">硬頭鎚 (d8+7 傷害), 14 HP, 1 護甲</p>
-<p class="MonsterStats"><span class="Tags">及遠, 擊退</span></p>
+<p class="MonsterStats"><span class="Tags">及遠, 強力</span></p>
 <p class="MonsterDescription">
 	他們居住在大地之下，因為他們已經不再屬於地表世界。在遠古的年代，這群不朽的強大泰坦種族從山川平原中逃離，被人類和他們的英雄們驅趕出去。被遺留在黑暗中等待時機，任深幽之下的滾燙岩漿溫暖著他們的憎恨與憤怒。傳說地震就是歌利亞誕生時的哭喊。而終有一天，他們會奪回屬於他們的一切。 <b>本能</b>: 奪回</p>
 <ul>
@@ -231,7 +231,7 @@
 </ul>
 <h3 class="MonsterName">食腐獸 (Otyugh)<span class="Tags">單獨, 大型</span></h3>
 <p class="MonsterStats">觸手 (d10+3 傷害), 20 HP, 1 護甲</p>
-<p class="MonsterStats"><span class="Tags">近身, 及遠, 擊退</span></p>
+<p class="MonsterStats"><span class="Tags">近身, 及遠, 強力</span></p>
 <p class="MonsterQualities"><strong>特性:</strong> 腐熱症</p>
 <p class="MonsterDescription">
 	食腐獸的求偶叫聲是一陣可怕而響亮的刺耳哭喊，聽起來就彷彿一頭瀕死大象和過度飢渴的禿鷲雜交時所發出的聲音。食腐獸大部分的時間都會半浸在汙濁的髒水中，且喜好吃食垃圾更勝過其他食物。也因此，牠經常在獸人、哥布林、和其他穴居亞人的內臟雜碎的餵養下長得又肥又壯。然而如果靠得太近，牠其中一條帶刺的觸手就會把你拽進那長滿鋒刃利齒的濕潤大口中。就算你僥倖逃過一劫，最好還是去看個醫生，否則你的勝利可能不會持續太久。 <b>本能</b>: 汙染弄髒</p>
@@ -250,7 +250,7 @@
 </ul>
 <h3 class="MonsterName">巨紫蠕蟲 (Purple Worm)<span class="Tags">單獨, 巨型</span></h3>
 <p class="MonsterStats">啃咬 (d10+5 傷害), 20 HP, 2 護甲</p>
-<p class="MonsterStats"><span class="Tags">及遠, 擊退</span></p>
+<p class="MonsterStats"><span class="Tags">及遠, 強力</span></p>
 <p class="MonsterQualities"><strong>特性:</strong> 掘地</p>
 <p class="MonsterDescription">
 	咿呀！咿呀！偉大的巨紫蠕蟲！那神聖的黏液是有福的！吾等是如此不配，得以行走在那綿延數里的巨大隧道。吾等不過是祂那吞噬萬物的紫蘭之光所映照的卑微之影。純粹的教徒，吾等冀望那日的降臨，終於回歸祂那利牙圍繞巨嘴的懷抱。讓祂吞噬我們！讓祂啃食我們的家園和村鎮，這樣我們才能被祂帶走，咿呀！咿呀！偉大的巨紫蠕蟲！ <b>本能</b>: 吞噬殆盡</p>
@@ -345,7 +345,7 @@
       $(".Tags").each(function(i) {
         var current = $(this);
         var tags_arr = current.html().split(", ");
-        current.html(tags_arr.map(function(tag){
+        current.html(" "+tags_arr.map(function(tag){
             var className = "";
             tag = tag.trim();
             if(isRangeTag(tag))         className = "red";
