--- a/moves/index.html
+++ b/moves/index.html
@@ -113,42 +113,81 @@
 
 <h1>基本動作</h1>
 <div class="Move"><h2 class="BasicMoveName">砍劈(Hack and Slash)</h2>
-<p class="NoIndent">When you <strong>attack an enemy in melee</strong>, roll+Str. On a 10+ you deal your damage to the enemy and avoid their attack. At your option, you may choose to do +1d6 damage but expose yourself to the enemy’s attack. On a 7–9, you deal your damage to the enemy and the enemy makes an attack against you.</p></div>
+<p class="NoIndent">
+	當你<strong>以近戰肉搏攻擊敵人</strong>時，擲+力量。<br/>
+	✴擲出10+時，你對敵人造成傷害並避開其攻擊。你也可以選擇造成額外+1d6傷害，但將自己暴露在敵人的攻擊之下。<br/>
+	✴擲出7-9時，你對敵人造成傷害，且敵人對你進行攻擊。</p></div>
+
 <div class="Move"><h2 class="BasicMoveName">射擊(Volley)</h2>
-<p class="NoIndent">When you <strong>take aim and shoot at an enemy at range</strong>, roll+Dex. On a 10+ you have a clear shot—deal your damage. On a 7–9, choose one (whichever you choose you deal your damage):</p>
-<ul><li>You have to move to get the shot placing you in danger of the GM’s choice</li>
-<li>You have to take what you can get: -1d6 damage</li>
-<li>You have to take several shots, reducing your ammo by one.</li></ul></div>
+<p class="NoIndent">
+	當你<strong>瞄準並射擊遠方的敵人</strong>時，擲+敏捷。<br/>
+	✴擲出10+時，你成功命中目標－－造成你的傷害。<br/>
+	✴擲出7-9時，選擇下列一項（無論選擇哪一項，你都可以對其造成傷害）：</p>
+<ul>
+	<li>你必須移動位置才能射中目標，這將使你置身GM所決定的危險當中。</li>
+	<li>你必須妥協：-1d6傷害。</li>
+	<li>你必須射好幾箭，減少 1發彈藥。</li></ul></div>
+
 <div class="Move"><h2 class="BasicMoveName">面對危險(Defy Danger)</h2>
-<p class="NoIndent">When you <strong>act despite an imminent threat</strong> or <strong>suffer a calamity</strong>, say how you deal with it and roll. If you do it…</p>
-<ul><li>…by powering through, +Str</li>
-<li>…by getting out of the way or acting fast, +Dex</li>
-<li>…by enduring, +Con</li>
-<li>…with quick thinking, +Int</li>
-<li>…through mental fortitude, +Wis</li>
-<li>…using charm and social grace, +Cha</li></ul>
-<p class="NoIndent">On a 10+, you do what you set out to, the threat doesn’t come to bear. On a 7–9, you stumble, hesitate, or flinch: the GM will offer you a worse outcome, hard bargain, or ugly choice.</p></div>
+<p class="NoIndent">
+	當你<strong>在迫在眉睫的威脅之下採取行動</strong>或<strong>即將遭受災難性的後果</strong>，敘述你要如何處理它並擲骰。如果你……</p>
+<ul>
+	<li>……靠蠻力解決，擲+力量。</li>
+	<li>……靠迅速行動或躲避開來，擲+敏捷。</li>
+	<li>……靠耐力忍受，擲+體質。</li>
+	<li>……藉由臨機應變，擲+智力。</li>
+	<li>……透過堅毅的精神，擲+睿知。</li>
+	<li>……使用魅力與社交禮儀，擲+魅力。</li></ul>
+<p class="NoIndent">
+	✴擲出10時，你做出你預計執行的行動，該威脅不會應驗。<br/>
+	✴擲出7-9時，你躊躇、猶豫、或退縮了：GM會給你一個更糟的後果、妥協，或是困難的抉擇。</p></div>
+
 <div class="Move"><h2 class="BasicMoveName">保衛(Defend)</h2>
-<p class="NoIndent">When you <strong>stand in defense of a person, item, or location</strong> under attack, roll+Con. On a 10+, hold 3. On a 7–9, hold 1. So long as you stand in defense, when you or the thing you defend is attacked you may spend hold, 1 for 1, to choose an option:</p>
-<ul><li>Redirect an attack from the thing you defend to yourself</li>
-<li>Halve the attack’s effect or damage</li>
-<li>Open up the attacker to an ally giving that ally +1 forward against the attacker</li>
-<li>Deal damage to the attacker equal to your level</li></ul></div>
+<p class="NoIndent">
+	當你<strong>挺身保護一個遭受攻擊的人、物品、或地點</strong>時，擲+體質。<br/>
+	✴擲出10+時，獲得 3掌握。<br/>
+	✴擲出7-9時，獲得 1掌握。<br/>
+	只要你仍維持保衛，當你或你的保衛對象遭受攻擊時，你可以消耗掌握，每消耗 1掌握就可以從下列選擇一項：</p>
+<ul>
+	<li>將針對保衛對象的攻擊導向你自己。</li>
+	<li>將該攻擊的效果或傷害減半。</li>
+	<li>使攻擊者露出破綻，讓一名夥伴在對付他時獲得下次+1。</li>
+	<li>對攻擊者造成等同於你等級的傷害。</li></ul></div>
+
 <div class="Move"><h2 class="BasicMoveName">憶述見聞(Spout Lore)</h2>
-<p class="NoIndent">When you <strong>consult your accumulated knowledge about something</strong>, roll+Int. On a 10+ the GM will tell you something interesting and useful about the subject relevant to your situation. On a 7–9 the GM will only tell you something interesting—it’s on you to make it useful. The GM might ask you “How do you know this?” Tell them the truth, now.</p></div>
+<p class="NoIndent">
+	當你<strong>回憶自己積累下來，關於某個事物的知識</strong>時，擲+智力。<br/>
+	✴擲出10+時，GM會就你的情況告訴你一件有趣且有用的情報。<br/>
+	✴擲出7-9時，GM只會告訴你一件有趣的情報－－你必須自己設法讓它派上用場。
+	GM可能會詢問你「你是怎麼知道的？」現在，陳述事實吧。</p></div>
+
 <div class="Move"><h2 class="BasicMoveName">審視現狀(Discern Realities)</h2>
-<p class="NoIndent">When you <strong>closely study a situation or person</strong>, roll+Wis. On a 10+ ask the GM 3 questions from the list below. On a 7–9 ask 1. Take +1 forward when acting on the answers.</p>
-<ul><li>What happened here recently?</li>
-<li>What is about to happen?</li>
-<li>What should I be on the lookout for?</li>
-<li>What here is useful or valuable to me?</li>
-<li>Who’s really in control here?</li>
-<li>What here is not what it appears to be?</li></ul></div>
+<p class="NoIndent">
+	當你<strong>仔細地研究一個情景或人物</strong>時，擲+睿知：<br/>
+	✴擲出10+時，從下列清單中選擇三個問題詢問GM。<br/>
+	✴擲出7-9時，則只能詢問一個問題。
+	當依據答案而採取行動時，獲得下次+1。</p>
+<ul>
+	<li>這裡最近發生了什麼事？</li>
+	<li>這裡有什麼即將發生？</li>
+	<li>我應該要注意些什麼？</li>
+	<li>這裡有什麼是對我有價值或派得上用場的？</li>
+	<li>誰才是掌控這裡的人？</li>
+	<li>這裡有什麼與其表面所見不同？</li></ul></div>
+
 <div class="Move"><h2 class="BasicMoveName">談判(Parley)</h2>
-<p class="NoIndent">When you <strong>have leverage on a GM character and manipulate them</strong>, roll+Cha. Leverage is something they need or want. On a hit they ask you for something and do it if you make them a promise first. On a 7–9, they need some concrete assurance of your promise, right now.</p></div>
+<p class="NoIndent">
+	當你<strong>擁有籌碼以利用GM的角色，且打算操弄他們</strong>時，擲+魅力。這個籌碼必須是他們所需要或想要的事物。<br/>
+	✴擲出10+時，他們會向你要求某件事，且若你先做出承諾，則他們將依你所言行事。<br/>
+	✴擲出7-9時，他們將要求一些關於你承諾的具體保證，現在就要。</p></div>
+
 <div class="Move"><h2 class="BasicMoveName">援助或干擾(Aid or Interfere)</h2>
-<p class="NoIndent">When you <strong>help or hinder someone</strong>, roll+Bond with them. On a 10+ they take +1 or -2, your choice. On a 7–9 you also expose yourself to danger, retribution, or cost.</p></div>
+<p class="NoIndent">
+	當你<strong>幫助或阻撓某人</strong>時，擲+對他們的羈絆。<br/>
+	✴擲出10+時，他們的擲骰獲得+1或-2，由你決定。<br/>
+	✴擲出7-9時，你同時也將讓自己承擔危險、報應、或代價。</p></div>
 <hr/>
+
 <h1>特殊動作</h1>
 <div class="Move"><h2 class="BasicMoveName">Last Breath</h2>
 <p class="NoIndent">When <strong>you’re dying</strong> you catch a glimpse of what lies beyond the Black Gates of Death’s Kingdom (the GM will describe it). Then roll (just roll, +nothing—yeah, Death doesn’t care how tough or cool you are). On a 10+ you’ve cheated death—you’re in a bad spot but you’re still alive. On a 7–9 Death will offer you a bargain. Take it and stabilize or refuse and pass beyond the Black Gates into whatever fate awaits you. On a miss, your fate is sealed. You’re marked as Death’s own and you’ll cross the threshold soon. The GM will tell you when.</p></div>
@@ -239,7 +278,7 @@
       $(".Tags").each(function(i) {
         var current = $(this);
         var tags_arr = current.html().split(", ");
-        current.html(tags_arr.map(function(tag){
+        current.html(" "+tags_arr.map(function(tag){
             var className = "";
             tag = tag.trim();
             if(isRangeTag(tag))         className = "red";
