--- a/classes/cleric/spells/index.html
+++ b/classes/cleric/spells/index.html
@@ -2,7 +2,7 @@
 <!DOCTYPE html>
 <html lang="tw">
   <head>
-  <title>Cleric Spells | 地城世界 HTML SRD</title>
+  <title>牧師法術 | 地城世界 HTML SRD</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     
     <link href="https://hazmole.github.io/Dungeon-World-HTML-SRD-release/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -109,34 +109,34 @@
     <div class="container">
        <div class="row">
           <div class="col-md-8 col-md-offset-1">
-             <div class="pseudoTitle">Cleric Spells</div>
-<div><h1>Rotes</h1>
+             <div class="pseudoTitle">牧師法術</div>
+<div><h1>禱念</h1>
 <p class="NoIndent">Every time you commune, you gain access to all of your rotes without having to select them or count them toward your allotment of spells.</p>
-<div class="Spell"><h3 class="SpellName">Light<span class="Tags">	Rote</span></h3>
+<div class="Spell"><h3 class="SpellName">光亮術 (Light)<span class="Tags">	禱念</span></h3>
 <p class="NoIndent">An item you touch glows with divine light, about as bright as a torch. It gives off no heat or sound and requires no fuel but is otherwise like a mundane torch. You have complete control of the color of the flame. The spell lasts as long as it is in your presence.</p></div>
-<div class="Spell"><h3 class="SpellName">Sanctify<span class="Tags">	Rote</span></h3>
+<div class="Spell"><h3 class="SpellName">聖潔淨化 (Sanctify)<span class="Tags">	禱念</span></h3>
 <p class="NoIndent">Food or water you hold in your hands while you cast this spell is consecrated by your deity. In addition to now being holy or unholy, the affected substance is purified of any mundane spoilage.</p></div>
-<div class="Spell"><h3 class="SpellName">Guidance<span class="Tags">	Rote</span></h3>
+<div class="Spell"><h3 class="SpellName">神導術 (Guidance)<span class="Tags">	禱念</span></h3>
 <p class="NoIndent">The symbol of your deity appears before you and gestures towards the direction or course of action your deity would have you take then disappears. The message is through gesture only; your communication through this spell is severely limited.</p></div>
 <hr/>
-<div><h1>Level 1 Spells</h1></div>
-<div class="Spell"><h3 class="SpellName">Bless<span class="Tags">	Level 1	, Ongoing</span></h3>
+<div><h1>等級1 法術</h1></div>
+<div class="Spell"><h3 class="SpellName">祝福術 (Bless)<span class="Tags">	Level 1	, 持續</span></h3>
 <p class="NoIndent">Your deity smiles upon a combatant of your choice. They take +1 ongoing so long as battle continues and they stand and fight. While this spell is ongoing you take -1 to cast a spell.</p></div>
-<div class="Spell"><h3 class="SpellName">Cure Light Wounds<span class="Tags">	Level 1</span></h3>
+<div class="Spell"><h3 class="SpellName">治療輕傷 (Cure Light Wounds)<span class="Tags">	Level 1</span></h3>
 <p class="NoIndent">At your touch wounds scab and bones cease to ache. Heal an ally you touch of 1d8 damage.</p></div>
-<div class="Spell"><h3 class="SpellName">Detect Alignment<span class="Tags">	Level 1</span></h3>
+<div class="Spell"><h3 class="SpellName">偵測陣營 (Detect Alignment)<span class="Tags">	Level 1</span></h3>
 <p class="NoIndent">When you cast this spell choose an alignment: Good, Evil, Lawful, or Chaotic. One of your senses is briefly able to detect that alignment. The GM will tell you what here is of that alignment.</p></div>
-<div class="Spell"><h3 class="SpellName">Cause Fear<span class="Tags">	Level 1	, Ongoing</span></h3>
+<div class="Spell"><h3 class="SpellName">造成恐懼 (Cause Fear)<span class="Tags">	Level 1	, 持續</span></h3>
 <p class="NoIndent">Choose a target you can see and a nearby object. The target is afraid of the object so long as you maintain the spell. Their reaction is up to them: flee, panic, beg, fight. While this spell is ongoing you take -1 to cast a spell. You cannot target entities with less than animal intelligence (magical constructs, undead, automatons, and the like).</p></div>
-<div class="Spell"><h3 class="SpellName">Magic Weapon<span class="Tags">	Level 1	 , Ongoing</span></h3>
+<div class="Spell"><h3 class="SpellName">魔化武器 (Magic Weapon)<span class="Tags">	Level 1	 , 持續</span></h3>
 <p class="NoIndent">The weapon you hold while casting does +1d4 damage until you dismiss this spell. While this spell is ongoing you take -1 to cast a spell.</p></div>
-<div class="Spell"><h3 class="SpellName">Sanctuary<span class="Tags">	Level 1</span></h3>
+<div class="Spell"><h3 class="SpellName">聖域術 (Sanctuary)<span class="Tags">	Level 1</span></h3>
 <p class="NoIndent">As you cast this spell, you walk the perimeter of an area, consecrating it to your deity. As long as you stay within that area you are alerted whenever someone acts with malice within the sanctuary (including entering with harmful intent). Anyone who receives healing within a sanctuary heals +1d4 HP.</p></div>
-<div class="Spell"><h3 class="SpellName">Speak With Dead<span class="Tags">	Level 1</span></h3>
+<div class="Spell"><h3 class="SpellName">死者交談術 (Speak With Dead)<span class="Tags">	Level 1</span></h3>
 <p class="NoIndent">A corpse converses with you briefly. It will answer any three questions you pose to it to the best of the knowledge it had in life and the knowledge it gained in death.</p></div>
 <hr/>
-<div><h1>Level 3 Spells</h1></div>
-<div class="Spell"><h3 class="SpellName">Animate Dead<span class="Tags">	Level 3	, Ongoing</span></h3>
+<div><h1>等級3 法術</h1></div>
+<div class="Spell"><h3 class="SpellName">Animate Dead<span class="Tags">	Level 3	, 持續</span></h3>
 <p class="NoIndent">You invoke a hungry spirit to possess a recently-dead body and serve you. This creates a zombie that follows your orders to the best of its limited abilities. Treat the zombie as a character, but with access to only the basic moves. It has a +1 modifier for all stats and 1 HP. The zombie also gets your choice of 1d4 of these traits:</p>
 <ul><li>It’s talented. Give one stat a +2 modifier.</li>
 <li>It’s durable. It has +2 HP for each level you have.</li>
@@ -145,7 +145,7 @@
 <p class="NoIndent">The zombie lasts until it is destroyed by taking damage in excess of its HP, or until you end the spell. While this spell is ongoing you take -1 to cast a spell.</p></div>
 <div class="Spell"><h3 class="SpellName">Cure Moderate Wounds<span class="Tags">	Level 3</span></h3>
 <p class="NoIndent">You staunch bleeding and set bones through magic. Heal an ally you touch of 2d8 damage.</p></div>
-<div class="Spell"><h3 class="SpellName">Darkness<span class="Tags">	Level 3	, Ongoing</span></h3>
+<div class="Spell"><h3 class="SpellName">Darkness<span class="Tags">	Level 3	, 持續</span></h3>
 <p class="NoIndent">Choose an area you can see: it’s filled with supernatural darkness and shadow. While this spell is ongoing you take -1 to cast a spell.</p></div>
 <div class="Spell"><h3 class="SpellName">Resurrection<span class="Tags">	Level 3</span></h3>
 <p class="NoIndent">Tell the GM you would like to resurrect a corpse whose soul has not yet fully departed this world. Resurrection is always possible, but the GM will give you one or more (possibly all) of these conditions to fulfill:</p>
@@ -157,46 +157,46 @@
 <div class="Spell"><h3 class="SpellName">Hold Person<span class="Tags">	Level 3</span></h3>
 <p class="NoIndent">Choose a person you can see. Until you cast a spell or leave their presence they cannot act except to speak. This effect ends immediately if the target takes damage from any source.</p></div>
 <hr/>
-<div><h1>Level 5 Spells</h1></div>
+<div><h1>等級5 法術</h1></div>
 <div class="Spell"><h3 class="SpellName">Revelation<span class="Tags">	Level 5</span></h3>
 <p class="NoIndent">Your deity answers your prayers with a moment of perfect understanding. The GM will shed light on the current situation. When acting on the information, you take +1 forward.</p></div>
 <div class="Spell"><h3 class="SpellName">Cure Critical Wounds<span class="Tags">	Level 5</span></h3>
 <p class="NoIndent">Heal an ally you touch of 3d8 damage.</p></div>
 <div class="Spell"><h3 class="SpellName">Divination<span class="Tags">	Level 5</span></h3>
 <p class="NoIndent">Name a person, place, or thing you want to learn about. Your deity grants you visions of the target, as clear as if you were there.</p></div>
-<div class="Spell"><h3 class="SpellName">Contagion<span class="Tags">	Level 5	, Ongoing</span></h3>
+<div class="Spell"><h3 class="SpellName">Contagion<span class="Tags">	Level 5	, 持續</span></h3>
 <p class="NoIndent">Choose a creature you can see. Until you end this spell, the target suffers from a disease of your choice. While this spell is ongoing you take -1 to cast a spell.</p></div>
 <div class="Spell"><h3 class="SpellName">Words of the Unspeaking<span class="Tags">	Level 5</span></h3>
 <p class="NoIndent">With a touch you speak to the spirits within things. The non-living object you touch answers three questions you pose, as best it can.</p></div>
-<div class="Spell"><h3 class="SpellName">True Seeing<span class="Tags">	Level 5	, Ongoing</span></h3>
+<div class="Spell"><h3 class="SpellName">True Seeing<span class="Tags">	Level 5	, 持續</span></h3>
 <p class="NoIndent">Your vision is opened to the true nature of everything you lay your eyes on. You pierce illusions and see things that have been hidden. The GM will describe the area before you ignoring any illusions and falsehoods, magical or otherwise. While this spell is ongoing you take -1 to cast a spell.</p></div>
 <div class="Spell"><h3 class="SpellName">Trap Soul<span class="Tags">	Level 5</span></h3>
 <p class="NoIndent">You trap the soul of a dying creature within a gem. The trapped creature is aware of its imprisonment but can still be manipulated through spells, parley, and other effects. All moves against the trapped creature are at +1. You can free the soul at any time but it can never be recaptured once freed.</p></div>
 <hr/>
-<div><h1>Level 7 Spells</h1></div>
+<div><h1>等級7 法術</h1></div>
 <div class="Spell"><h3 class="SpellName">Word of Recall<span class="Tags">	Level 7</span></h3>
 <p class="NoIndent">Choose a word. The first time after casting this spell that you speak the chosen word, you and any allies touching you when you cast the spell are immediately returned to the exact spot where you cast the spell. You can only maintain a single location; casting Word of Recall again before speaking the word replaces the earlier spell.</p></div>
 <div class="Spell"><h3 class="SpellName">Heal<span class="Tags">	Level 7</span></h3>
 <p class="NoIndent">Touch an ally and you may heal their damage a number of points up to your maximum HP.</p></div>
 <div class="Spell"><h3 class="SpellName">Harm<span class="Tags">	Level 7</span></h3>
 <p class="NoIndent">Touch an enemy and strike them with divine wrath—deal 2d8 damage to them and 1d6 damage to yourself. This damage ignores armor.</p></div>
-<div class="Spell"><h3 class="SpellName">Sever<span class="Tags">	Level 7	, Ongoing</span></h3>
+<div class="Spell"><h3 class="SpellName">Sever<span class="Tags">	Level 7	, 持續</span></h3>
 <p class="NoIndent">Choose an appendage on the target such as an arm, tentacle, or wing. The appendage is magically severed from their body, causing no damage but considerable pain. Missing an appendage may, for example, keep a winged creature from flying, or a bull from goring you on its horns. While this spell is ongoing you take -1 to cast a spell.</p></div>
 <div class="Spell"><h3 class="SpellName">Mark of Death<span class="Tags">	Level 7</span></h3>
 <p class="NoIndent">Choose a creature whose true name you know. This spell creates permanent runes on a target surface that will kill that creature, should they read them.</p></div>
 <div class="Spell"><h3 class="SpellName">Control Weather<span class="Tags">	Level 7</span></h3>
 <p class="NoIndent">Pray for rain—or sun, wind, or snow. Within a day or so, your god will answer. The weather will change according to your will and last a handful of days.</p></div>
 <hr/>
-<div><h1>Level 9 Spells</h1></div>
+<div><h1>等級9 法術</h1></div>
 <div class="Spell"><h3 class="SpellName">Storm of Vengeance<span class="Tags">	Level 9</span></h3>
 <p class="NoIndent">Your deity brings the unnatural weather of your choice to pass. Rain of blood or acid, clouds of souls, wind that can carry away buildings, or any other weather you can imagine: ask and it shall come.</p></div>
 <div class="Spell"><h3 class="SpellName">Repair<span class="Tags">	Level 9</span></h3>
 <p class="NoIndent">Choose one event in the target’s past. All effects of that event, including damage, poison, disease, and magical effects, are ended and repaired. HP and diseases are healed, poisons are neutralized, magical effects are ended.</p></div>
-<div class="Spell"><h3 class="SpellName">Divine Presence<span class="Tags">	Level 9	, Ongoing</span></h3>
+<div class="Spell"><h3 class="SpellName">Divine Presence<span class="Tags">	Level 9	, 持續</span></h3>
 <p class="NoIndent">Every creature must ask your leave to enter your presence, and you must give permission aloud for them to enter. Any creature without your leave takes an extra 1d10 damage whenever they take damage in your presence. While this spell is ongoing you take -1 to cast a spell.</p></div>
 <div class="Spell"><h3 class="SpellName">Consume Unlife<span class="Tags">	Level 9</span></h3>
 <p class="NoIndent">The mindless undead creature you touch is destroyed and you steal its death energy to heal yourself or the next ally you touch. The amount of damage healed is equal to the HP that the creature had remaining before you destroyed it.</p></div>
-<div class="Spell"><h3 class="SpellName">Plague<span class="Tags">	Level 9	, Ongoing</span></h3>
+<div class="Spell"><h3 class="SpellName">Plague<span class="Tags">	Level 9	, 持續</span></h3>
 <p class="NoIndent">Name a city, town, encampment, or other place where people live. As long as this spell is active that place is beset by a plague appropriate to your deity’s domains (locusts, death of the first born, etc.) While this spell is ongoing you take -1 to cast a spell.</p></div></div>
 
           </div>
@@ -244,7 +244,7 @@
       $(".Tags").each(function(i) {
         var current = $(this);
         var tags_arr = current.html().split(", ");
-        current.html(tags_arr.map(function(tag){
+        current.html(" "+tags_arr.map(function(tag){
             var className = "";
             tag = tag.trim();
             if(isRangeTag(tag))         className = "red";
